<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Diabetics helper</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="PATIENT_LIST_TITLE">Lista pacjentów</string>
    <string name="MEASUREMENT_TITLE">Wyniki pomiarów</string>
    <string name="TOAST_MESSAGE_LOGOUT">Wylogowano!</string>
    <string name="TOAST_MESSAGE_PATIENT_DOES_NOT_EXIST">Taki pacjent nie istnieje</string>
    <string name="TOAST_MESSAGE_ADD_MEASUREMENT">Dodano pomiar!</string>
    <string name="TOAST_MESSAGE_UNSUPPORTED_MEASUREMENT_FORMAT">Nieprawidłowy format pomiaru</string>
    <string name="TOAST_MESSAGE_REGISTRATION_SUCCESS">Użytkownik został zarejestrowany!</string>
    <string name="TOAST_MESSAGE_USER_ALREADY_HAS_REGISTERED">Użytkownik o podanym nr. PESEL został już zarejestrowany!
    </string>
    <string name="TOAST_MESSAGE_HAVE_TO_TYPE_PASSWORD_AGAIN">Musisz powtórzyć hasło.</string>
    <string name="TOAST_MESSAGE_HAVE_TO_TYPE_PASSWORD">Musisz wprowadzić hasło.</string>
    <string name="TOAST_MESSAGE_HAVE_TO_TYPE_BIRTH_DATE">Musisz wprowadzić date urodzenia.</string>
    <string name="TOAST_MESSAGE_HAVE_TO_TYPE_PESEL_ID">Musisz wprowadzić nr PESEL</string>
    <string name="TOAST_MESSAGE_HAVE_TO_TYPE_SURNAME">Musisz wprowadzić nazwisko.</string>
    <string name="TOAST_MESSAGE_HAVE_TO_TYPE_FIRSTNAME">Musisz wprowadzić imię.</string>
    <string name="TOAST_MESSAGE_INCORRECT_PESEL_FORMAT">Niepoprawny nr. PESEL!</string>
    <string name="TOAST_MESSAGE_TYPED_PASSWORD_NOT_EQUAL">Podane hasła powinny być identyczne!</string>
    <string name="TOAST_MESSAGE_INCORRECT_BIRTH_DATE_FORMAT">Niepoprawny format daty urodzenia!</string>
    <string name="TOAST_MESSAGE_PESEL_ALREADY_REGISTERED">Ten nr. PESEL nie został zarejestrowany</string>
    <string name="TOAST_MESSAGE_INCORRECT_PASSWORD">Hasło nie jest prawidłowe!</string>
    <string name="MAIN_ACTIVITY_WELCOME_MESSAGE">Witamy w programie</string>
    <string name="MAIN_ACTIVITY_APP_NAME">Diabetics Helper</string>
    <string name="MAIN_ACTIVITY_LOGIN_MESSAGE">Prosimy o zalogowanie</string>
    <string name="MAIN_ACTIVITY_PESEL_TEXT">PESEL:</string>
    <string name="MAIN_ACTIVITY_PASSWORD_TEXT">Hasło</string>
    <string name="MAIN_ACTIVITY_LETS_LOGIN_MESSAGE">Zaloguj</string>
    <string name="MAIN_ACTIVITY_ADD_USER_MESSAGE">Dodaj użytkownika</string>
    <string name="DOCTOR_ACTIVITY_LOGGED_AS_DOCTOR_MESSAGE">Zalogowany jako lekarz:</string>
    <string name="USER_ACTIVITY_PESEL_TEXT">Pesel:</string>
    <string name="USER_ACTIVITY_BIRTH_DATE_TEXT">Data urodzenia:</string>
    <string name="DOCTOR_ACTIVITY_PATIENT_PESEL_TEXT">Nr. PESEL pacjenta</string>
    <string name="DOCTOR_ACTIVITY_ADD_PATIENT_TEXT">Dodaj pacjenta</string>
    <string name="DOCTOR_ACTIVITY_PATIENT_LIST">Lista pacjentów</string>
    <string name="USER_ACTIVITY_LOGOUT_TEXT">Wyloguj</string>
    <string name="MEASUREMENT_ACTIVITY_MEASUREMENTS_TEXT">Wyniki pomiarów glukozy:</string>
    <string name="MEASUREMENT_ACTIVITY_GLUCOSE_MEASUREMENTS_TEXT">Pomiary glukozy</string>
    <string name="MEASUREMENT_ACTIVITY_CLOSE_TEXT">Zamknij</string>
    <string name="TOAST_MESSAGE_LOGGED_AS_DOCTOR">Zalogowany jako lekarz!</string>
    <string name="TOAST_MESSAGE_LOGGED_AS_PATIENT">Zalogowany jako pacjent!</string>
    <string name="PATIENT_ACTIVITY_LOGGED_AS">Zalogowany jako:</string>
    <string name="USER_ACTIVITY_TYPE_GLUCOSE_MEASURMENT_TEXT">Wprowadź kolejny pomiar glukozy we krwi:</string>
    <string name="PATIENT_ACTIVITY_GLUCOSE_MEASUREMENTS">Pomiary glukozy</string>

</resources>
